<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img_loginbkg"
    tools:context=".view.Login">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_txt"
                android:textAlignment="center"
                android:textColor="@color/brown_background1"
                android:textSize="36sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/tbUsernameLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_edittext_v2"
                android:drawableStart="@drawable/ic_user"
                android:drawablePadding="8dp"
                android:hint="@string/mail_txt"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/tbPswLogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_v2"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/brown_background1"
                android:text="@string/login_txt"
                android:textSize="18sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/linkRegister"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/not_account"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_google"/>

            <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_facebook"/>

            <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:src="@drawable/ic_twitter" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>

