<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/img_loginbkg"
    tools:context=".view.Register">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_edittext"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/register_txt"
                android:textAlignment="center"
                android:textColor="@color/brown_background"
                android:textSize="36sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <ImageView
                    android:id="@+id/ivInformation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_information"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:padding="8dp"
                    android:paddingEnd="14dp"
                    android:clickable="true"
                    android:focusable="true"/>

                <EditText
                    android:id="@+id/tbUsernameRegister"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/custom_edittext_v2"
                    android:drawableStart="@drawable/ic_user"
                    android:paddingEnd="15dp"
                    android:drawablePadding="8dp"
                    android:hint="@string/username_txt"
                    android:padding="8dp"
                    android:textColor="@color/black"
                    android:focusableInTouchMode="true"/>
            </RelativeLayout>


            <EditText
                android:id="@+id/tbMailRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_v2"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="8dp"
                android:hint="@string/mail_txt"
                android:padding="8dp"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/tbPswRegister"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/custom_edittext_v2"
                android:drawableStart="@drawable/ic_password_lock"
                android:drawablePadding="8dp"
                android:hint="@string/password_txt"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/brown_background"
                android:text="@string/register_txt"
                android:textStyle="bold"
                android:textSize="19sp"
                app:cornerRadius="20dp" />

            <TextView
                android:id="@+id/linkToLogin"
                android:layout_width="wrap_content"
                android:layout_height="33dp"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:clickable="true"
                android:gravity="center"
                android:text="@string/have_account"
                android:textSize="12sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:background="@drawable/custom_edittext"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageButton
                android:id="@+id/btnGoogle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/trasparent"
                android:src="@drawable/ic_google"/>

            <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/trasparent"
                android:src="@drawable/ic_facebook"/>

            <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/trasparent"
                android:src="@drawable/ic_twitter" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>