<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivCover"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/ic_book_cover"
                android:adjustViewBounds="true"
                android:padding="25sp"
                android:contentDescription="@string/cover"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_weight="3"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/tvTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:text="@string/title_place_holder"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:lines="2"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/tvAuthor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAlignment="textStart"
                        android:layout_alignParentEnd="true"
                        android:text="@string/author_place_holder"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:lines="2"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_weight="1"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_gravity="end|bottom"
                        android:text="0.33 €"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/tvCart"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_gravity="end|bottom"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:src="@drawable/ic_card2" />

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>